--- a/index.html
+++ b/index.html
@@ -7,20 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="In Cheapestore you'll find in one place all the clothes you need, name it we have">
   <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-  <!--<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
-  <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
   <title>Cheapestore | Home</title>
 </head>
 
 <body>
-  <!-- SITIO EN CONSTRUCCIÓN :) -->
   <header>
     <div class="header">
       <a class="logo" href="#"><strong>CHEAPESTORE</strong></a>
@@ -33,51 +27,53 @@
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="./pages/Offers.html">Offers</a></li>
-        <li><a href="./pages/Women.html">Women</a></li>
-        <li><a href="./pages/Men.html">Men</a></li>
-        <li><a href="./pages/Contact.html">Contact</a></li>
+        <li><a href="./pages/offers.html">Offers</a></li>
+        <li><a href="./pages/women.html">Women</a></li>
+        <li><a href="./pages/men.html">Men</a></li>
+        <li><a href="./pages/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <h1 class="clipped">Cheapestore</h1>
 
-  <div id="myCarousel" class="carousel slide" data-interval="6500" data-ride="carousel">
+  <div id="myCarousel" class="carousel slide" data-interval="6500" data-bs-ride="carousel">
     <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
+      <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
+      <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
-      <div class="active item carousel-fade">
-        <img class="d-block w-100" src="./images/banner.gif" alt="">
-        <div class="carousel-caption">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="./images/Slider/slider-off.gif" alt="">
+        <div class="carousel-caption d-none d-md-block">
           <h2>First slide label</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
       </div>
-      <div class="item carousel-fade">
-        <img class="d-block w-100" src="./images/banner.gif" alt="">
+      <div class="carousel-item">
+        <img class="d-block w-100" src="./images/Slider/slider-sale.gif" alt="">
         <div class="carousel-caption">
           <h2>Second slide label</h2>
           <p>Aliquam sit amet gravida nibh, facilisis gravida odio.</p>
         </div>
       </div>
-      <div class="item carousel-fade">
-        <img class="d-block w-100" src="./images/banner.gif" alt="">
+      <div class="carousel-item">
+        <img class="d-block w-100" src="./images/Slider/slider-winter.gif" alt="">
         <div class="carousel-caption">
           <h2>Third slide label</h2>
           <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
         </div>
       </div>
     </div>
-    <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-    </a>
-    <a class="carousel-control right" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-    </a>
+    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
 
   <main class="container">
@@ -178,10 +174,7 @@
     </section>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
