--- a/pages/Men.html
+++ b/pages/Men.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Not only women clothes, find what you are looking for">
   <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -20,7 +21,7 @@
   <header>
     <div class="header">
       <a class="logo" href="../index.html"><strong>CHEAPESTORE</strong></a>
-      <input class="look-for" type="text" value="Look for product, brand, category...">
+      <input class="look-for" type="text" placeholder="Look for product, brand, category...">
       <button>Login</button>
       <button>
         <i class="bi bi-cart" alt="shopping-cart-logo" height="12"></i>
@@ -29,10 +30,10 @@
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="./Offers.html">Offers</a></li>
-        <li><a href="./Women.html">Women</a></li>
+        <li><a href="./offers.html">Offers</a></li>
+        <li><a href="./women.html">Women</a></li>
         <li><a href="#">Men</a></li>
-        <li><a href="./Contact.html">Contact</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -45,7 +46,7 @@
     <section class="swiper mySwiper">
       <div class="swiper-wrapper">
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/Men/black&white-stripes.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
               <h3>Shorts</h3>
@@ -59,7 +60,7 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/Men/black-shoes.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
               <h3>Shorts</h3>
@@ -73,7 +74,7 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/Men/brooklyn-jacket.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
               <h3>Shorts</h3>
@@ -87,7 +88,7 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/Men/short-shirt.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
               <h3>Shorts</h3>
@@ -101,7 +102,7 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/Men/squared-coat.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
               <h3>Shorts</h3>
@@ -115,7 +116,7 @@
           </div>
         </article>
         <article class="swiper-slide">
-          <img class="swiper-image" src="../images/offer-men.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/Men/squared-shirt.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
             <div>
               <h3>Shorts</h3>
