--- a/pages/Offers.html
+++ b/pages/Offers.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="All the offers you need, stop wasting your money!">
   <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -28,9 +29,9 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="#">Offers</a></li>
-        <li><a href="./Women.html">Women</a></li>
-        <li><a href="./Men.html">Men</a></li>
-        <li><a href="./Contact.html">Contact</a></li>
+        <li><a href="./women.html">Women</a></li>
+        <li><a href="./men.html">Men</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
